Fixed some card layout issues

--- a/team_fundraising/static/fundraiser.css
+++ b/team_fundraising/static/fundraiser.css
@@ -42,3 +42,12 @@ h2 {
     background-color: #D1481D;
     border-color: #D1481D;
 }
+
+.card-title {
+    line-height: 1.3;
+    min-height: 2.5em;
+}
+
+.card-body {
+    padding-bottom: 0px;
+}
